application/blog/blog-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-service
  labels:
    app: blog
spec:
  ports:
    - port: 8080    #服务对外端口， - 代表数组，可以定义多个
      protocol: TCP
      targetPort: 8080  #容器端口
  selector:          #具有以下标签的 pod 都属于该服务
    app: blog
    tier: backend

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-deployment
  labels:
    app: blog
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: blog
      tier: backend
  template:
    metadata:
      labels:
        app: blog
        tier: backend
    spec:
      containers:
        - name: springboot-container
          image: ruibaby/halo
          imagePullPolicy: IfNotPresent   #镜像拉取策略, 改成Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /root/.halo
              name: halo
#          #存活探针
#          livenessProbe:
#            httpGet:
#              port: 8080
#              path: /actuator/health
#            periodSeconds: 20
#            timeoutSeconds: 2
#            failureThreshold: 5
#            initialDelaySeconds: 30  #30s之后开始检测存活状态
#          #就绪探针，只有请求成功，才会对外提供服务
#          readinessProbe:
#            httpGet:
#              port: 8080
#              path: /actuator/health
#            periodSeconds: 20
#            timeoutSeconds: 2
#            failureThreshold: 5
#            initialDelaySeconds: 30
          #生命周期钩子
          #          lifecycle:
          #            postStart:
          #              exec:
          #                command:
          #                  - sh
          #                  - -c
          #                  - "ls"
          #            preStop:  #这会阻塞SIGTERM信号
          #              exec:
          #                command:
          #                  - sh
          #                  - -c
          #                  - "sleep 5"
          #资源限制
#          resources:
#            requests: #资源申请最小值
#              cpu: 100m
#              memory: 100Mi
#            limits:   #资源申请最大值
#              cpu: 200m
#              memory: 500Mi
      volumes:
        - name: halo
          hostPath:
            path: /root/.halo
